# advertisement_app

./: .env_example  API Example - Swagger.mhtml  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
api/: base_crud.py  database.py  logging_conf.py  main.py
api/adverts/: crud.py  filters.py  models.py  routers.py  schemas.py
api/complaint/: crud.py  filters.py  models.py  routers.py  schemas.py
api/migrations/: env.py
api/migrations/versions/: 2f41bd0037e1_complaint.py  322e2f980bca_initial3.py  37e50ce433f8_initial3.py  3c8bf34129ad_initial.py  549e1c00614e_initial2.py  7b1ac43c4c9f_initial3.py  84398ab0eb71_complaint_fix2.py  a818e34b2d96_complaint_fix3.py  b6651440a4b8_initial3.py  daa5dba67c42_complaint_fix.py  e04a7c7acf24_initial.py  e66f967242bf_initial3.py
api/users/: crud.py  dependences.py  filters.py  models.py  schemas.py
api/users/routers/: auth.py  users.py
api/users/utils/: auth.py  users.py
app/: base_crud.py  database.py  main.py
app/adverts/: crud.py  filters.py  models.py  routers.py  schemas.py
app/complaint/: crud.py  models.py  routers.py
app/migrations/: env.py
app/users/: auth.py  crud.py  dependences.py  filters.py  models.py  oauth2.py  router.py  schemas.py
app/users/routers/: auth.py  users.py
app/users/utils/: auth.py  users.py
docker/: app.sh
