[tool.poetry]
name = "advertisement-app"
version = "0.1.0"
description = ""
authors = ["Dmitriy Zemtsov <dmitriyzemtsov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
